--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,17 +1,22 @@
 backend:
   name: git-gateway
-  repo: catiuespi/neacajui-v10
-  branch: master 
+  repo: catiuespi/neacajui-v15
+  branch: main 
 
 media_folder: "static/images/uploads"
 public_folder: "uploads"
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "content/posts"
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'content/posts'
     create: true
     slug: "{{slug}}"
+    media_folder: ''
+    public_folder: ''
+    path: '{{title}}/index'
     fields:
-      - {label: "Título", name: "title", widget: "string"}
-      - {label: "Conteúdo", name: "body", widget: "markdown"}
+      - { label: 'Título', name: 'title', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Data', name: 'date', widget: 'datetime' }
+      - { label: 'Conteúdo', name: 'body', widget: 'markdown' }
